syntax = "proto2";
package app.cash.barber.api;

option java_package = "app.cash.protos.barber.api";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

/** Support recursive, primitive types in [DocumentData] protos */
message BarberSignature {
  enum Type {
    TYPE_DO_NOT_USE = 0;
    STRING = 1;
    LONG = 2;
    DURATION = 3;
    INSTANT = 4;
  }
}

/* Provides the necessary context to render a template matching template_token */
message DocumentData {
  /* A representation of a field that supports a dynamic value type */
  message Field {
    /* Context variable name (can be dot separated path to support nesting) that is used in templates */
    optional string key = 1;
    /* Context variable in a supported type (string, integer, duration, instant) */
    oneof value {
      string value_string = 2;
      int64 value_long = 3;
      google.protobuf.Duration value_duration = 4;
      google.protobuf.Timestamp value_instant = 5;
      /*
       * For Kotlin DocumentData converted to Proto that have a null value, this field can provide
       * a hint for the type which otherwise would be unknown since null would show up as all other
       * value fields as null
       */
      BarberSignature.Type value_null_type = 6;
      // TODO add amount to support Money
    }
  }

  /*
   * A unique identifier for the corresponding DocumentTemplate that this DocumentData provides
   * necessary context to render
   */
  optional string template_token = 1;
  /* The context values required to render a DocumentTemplate of the given template_token */
  repeated Field fields = 2;
}

/* Contains the templates for a given locale to render target Documents */
message DocumentTemplate {
  /* A template field within a DocumentTemplate */
  message Field {
    /* Field name matches one of the fields of the target Document */
    optional string key = 1;
    /* A Mustache compatible template string with values filled in by DocumentData */
    optional string template = 2;
  }

  /* A unique identifier used for lookup */
  optional string template_token = 1;
  /* An auto-incrementing integer to identify a unique version of the same DocumentTemplate */
  optional int64 version = 2;
  /* RFC 5646 locale language-region that the DocumentTemplate targets */
  optional string locale = 3;
  /* Signature of the required DocumentData to render this DocumentTemplate */
  optional string source_signature = 4;
  /* Signature for the Documents that this DocumentTemplate can render */
  repeated string target_signatures = 5;
  /* Fields that correspond to all fields of target Documents */
  repeated Field fields = 6;
}